# little-big-int

./: CMakeLists.txt  README.md
src/: little-big-int.cpp  little-big-int.hpp
test/: CMakeLists.txt  unit.cpp
